2014-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Vault.pm: Get interactivity.
	* server-src/amvault.pl: Add --no-interactivity
	* man/xml-source/amvault.8.xml: Document --no-interactivity argument.

2014-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Runs.pm (list): Do not fail on empty file.

2014-12-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Set $sle->{'status'} on taper eof.
	* server-src/driverio.h (taper_t): Add down field.
	* server-src/driverio.c (startup_tape_process): Set down to false.
	* server-src/driver.c (start_some_dumps): Do not use a taper if it is
	  down.
	* server-src/driver.c (handle_taper_result): Set it to down on BOGUS.

2014-12-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c (support): Output
	  "MESSAGE-SELFCHECK-JSON YES".
	* client-src/client_util.c (run_client_scripts): Output script output
	  in meesage form.
	* client-src/client_util.h (run_client_scripts): Change proptotype.
	* client-src/selfcheck.c: Add  fprint_message argument to
	  run_client_scripts.
	* common-src/amfeatures.c: Add fe_sendsize_message,
	  fe_sendbackup_message.
	* common-src/amfeatures.h: Add fe_sendsize_message,
	  fe_sendbackup_message.
	* common-src/ammessage.c: Add error code 4600000 and 4600001.
	* perl/Amanda/Message.pm: Add many code range.
	* client-src/sendbackup.c: Add NULL argument to run_client_scripts.
	* client-src/sendsize.c: Add NULL argument to run_client_scripts.
	* recover-src/extract_list.c: Add NULL argument to run_client_scripts.

2014-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Print 'data in sum CRC' to debug file.

2014-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Fix memory allocation.

2014-12-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Vault.pm: Continue to next dump if src device fail.

2014-12-11  Jean-Louis Martineau <martineau@zmanda.com>