@@ -1,3 +1,6 @@
+2014-12-17  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/DB/Catalog.pm: set $dumps{$dumpkey} on partnum==1.
+
 2014-12-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Vault.pm: Get interactivity.
 	* server-src/amvault.pl: Add --no-interactivity
